# regploration

./: .gitignore  README.md
aqua/: consume_registry.aqua  mean_service.aqua  mean_services.aqua  package-lock.json  package.json  register_services.aqua  service_registration.aqua  types.aqua
data/: service_addrs.json
services/mean-calc/: Cargo.toml
services/mean-calc/artifacts/: mean_calc.wasm
services/mean-calc/configs/: Config.toml  deployment_cfg.json
services/mean-calc/scripts/: build.sh
services/mean-calc/src/: main.rs
